--- a/css/game.css
+++ b/css/game.css
@@ -17,6 +17,8 @@
   border-radius: 16px;
   font-size: 1.2em;
   font-weight: 700;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
 #reset:hover {
   background-color: blue;
