--- a/css/game.css
+++ b/css/game.css
@@ -4,7 +4,7 @@
   width: 500px;
   max-width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   gap: 16px;
 }
