style: espaçamento top-info

--- a/css/game.css
+++ b/css/game.css
@@ -1,12 +1,11 @@
 @charset "UTF-8";
 
 #info-top {
-  width: 500px;
-  max-width: 100%;
+  width: 450px;
+  max-width: 90%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  gap: 16px;
 }
 #reset {
   margin: 0 auto;
